Implement swagger & unit tests
