# swagger.yaml
@@ -8,10 +8,14 @@ servers:
   - url: https://auth-service.dogcatbmpz.by/
     description: Production
 tags:
-- name: "Auth"
-  description: "Authorization"
-- name: "Users"
-  description: "All about users"
+- name: Auth
+  description: Authorization
+- name: Users
+  description: All about users
+- name: Permissions
+  description: All about permissions
+- name: Roles
+  description: All about roles
 paths:
   /auth/register:
     post:
@@ -41,10 +45,20 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                success: false
-                error: 'Fields are required'
+                $ref: '#/components/schemas/MultipleErrors'
+              examples:
+                Client Error:
+                  value:
+                    success: false
+                    error: 'User already exist'
+                Validation Errors:
+                  value:
+                    success: false
+                    errors: 
+                      - value: ''
+                        msg: Required
+                        param: name
+                        location: body
   /auth/login:
     post:
       summary: Login with existing user
@@ -111,8 +125,279 @@ paths:
               example:
                 success: false
                 error: 'Forbidden'
+    put:
+      summary: Update user information (your own)
+      tags:
+      - "Users"
+      parameters:
+      - name: "userId"
+        in: "path"
+        description: "ID of user to edit [ONLY YOURS]"
+        required: true
+        type: string
+      responses:
+        '200':
+          description: Returns updated user info
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    $ref: '#/components/schemas/User'
+        '400':
+          description: validation errors because of invalid fields
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        '403':
+          description: Forbidden error while trying to update someone else's profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Forbidden'
+  /users/{userId}/permissions:
+    get:
+      summary: Get user permissions
+      tags:
+      - "Users"
+      parameters:
+      - name: "userId"
+        in: "path"
+        description: "ID of user who permissions to return"
+        required: true
+        type: string
+      responses:
+        '200':
+          description: Returns user permissions
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: object
+                    properties:
+                      rolePermissions:
+                        type: array
+                        items:
+                          type: string
+                      additionalPermissions:
+                        type: array
+                        items:
+                          type: string
+        '403':
+          description: Forbidden error when you don't have enough permissions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Forbidden'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'User not found'
+  /users/{userId}/role:
+    put:
+      summary: Update user role
+      tags:
+      - "Users"
+      parameters:
+      - name: "userId"
+        in: "path"
+        description: "ID of user to replace a role"
+        required: true
+        type: string
+      responses:
+        '200':
+          description: Role updated successfully
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+        '400':
+          description: Validation errors
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Role field id required'
+        '403':
+          description: Forbidden error when you don't have enough permissions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Forbidden'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'User not found'
+  /permissions:
+    get:
+      summary: Get all permissions available to be additional
+      tags:
+      - "Permissions"
+      responses:
+        '200':
+          description: Returns all permissions
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: array
+                    items:
+                      type: string
+        '403':
+          description: Forbidden error when you don't have enough permissions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Forbidden'
+    put:
+      summary: Update user additional permissions
+      tags:
+      - "Permissions"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+                permissions:
+                  type: object
+                  example:
+                    EDIT_NOTICE: true
+                    CREATE_NOTICE: false
+      responses:
+        '200':
+          description: Permissions successfully updated
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+        '400':
+          description: Validation errors
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Permissions field id required'
+        '403':
+          description: Forbidden error when you don't have enough permissions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Forbidden'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'User not found'
+  /roles:
+    get:
+      summary: Get all roles
+      tags:
+      - "Roles"
+      responses:
+        '200':
+          description: Returns all roles
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: array
+                    items:
+                      type: string
+        '403':
+          description: Forbidden error when you don't have enough permissions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                success: false
+                error: 'Forbidden'
 components:
   schemas:
+    ValidationError:
+      type: object
+      properties:
+        success:
+          type: boolean
+          default: false
+        errors:
+          type: array
+          items:
+            type: object
+            properties:
+              value:
+                type: string
+              msg:
+                type: string
+              param:
+                type: string
+              location: 
+                type: string
     Error:
       type: object
       properties:
@@ -121,6 +406,11 @@ components:
           default: false
         error:
           type: string
+    MultipleErrors:
+      type: object
+      oneOf:
+        - $ref: '#/components/schemas/Error'
+        - $ref: '#/components/schemas/ValidationError'
     User:
       type: object
       properties:
